crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__creation__test__anchor_link.snap
---
source: crates/oxvg_actions/src/actions/structure/creation.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><a href="#uri"><text>One</text><text>Two</text></a><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>text</oxvg:arg></oxvg:action><oxvg:action oxvg:id="AnchorLink"><oxvg:arg>#uri</oxvg:arg></oxvg:action></oxvg:history><oxvg:selection oxvg:ids="3"/></oxvg:state></svg>
