crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__creation__test__clone.snap
---
source: crates/oxvg_actions/src/actions/structure/creation.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><symbol id="clone0"><text>One</text></symbol><symbol id="clone0"><text>Two</text></symbol><use href="#clone0"/><use href="#clone0"/><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>text</oxvg:arg></oxvg:action><oxvg:action oxvg:id="Clone"/></oxvg:history><oxvg:selection oxvg:ids="11 9"/></oxvg:state></svg>
