crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__creation__test__duplicate-2.snap
---
source: crates/oxvg_actions/src/actions/structure/creation.rs
expression: actor.derive_state().unwrap()
---
DerivedState {
    history: [
        Select(
            Cow(
                "text",
            ),
        ),
        Duplicate,
    ],
    selection: [
        5,
        10,
    ],
    info: Some(
        Info {
            element_id: Some(
                Text,
            ),
            content_model: ContentModel {
                permitted_categories: ElementCategory(
                    Animation | BasicShape | Container | Descriptive | FilterPrimitive | Gradient | Graphics | GraphicsReferencing | LightSource | NeverRendered | PaintServer | Renderable | Shape | Structural | StructurallyExternal | TextContent | TextContentChild | TransferFunction | Uncategorised,
                ),
                permitted_elements: {
                    A,
                    ClipPath,
                    Marker,
                    Mask,
                    Script,
                    Style,
                },
            },
            attributes: AttrModel {
                expected_attribute_groups: AttributeGroup(
                    AnimationAddition | AnimationAttributeTarget | AnimationEvent | AnimationTargetElement | AnimationTiming | AnimationValue | Aria | ConditionalProcessing | Core | DocumentEvent | DocumentElementEvent | FilterPrimitive | GraphicalEvent | GlobalEvent | Presentation | TransferFunction | XLink,
                ),
                expected_attributes: {
                    DXText,
                    DYText,
                    ExternalResourcesRequired,
                    LengthAdjust,
                    RotateText,
                    TextLength,
                    XText,
                    YText,
                },
                values: {},
            },
            text: None,
        },
    ),
    ui: None,
}
