crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__creation__test__insert-2.snap
---
source: crates/oxvg_actions/src/actions/structure/creation.rs
expression: actor.derive_state().unwrap()
---
DerivedState {
    history: [
        Select(
            Cow(
                "svg",
            ),
        ),
        Insert(
            Cow(
                "path",
            ),
        ),
        InsertNS(
            Cow(
                "http://www.w3.org/XML/1998/namespace",
            ),
            Cow(
                "xml:path",
            ),
        ),
    ],
    selection: [
        3,
    ],
    info: Some(
        Info {
            element_id: Some(
                Unknown(
                    QualName {
                        prefix: XML,
                        local: Cow(
                            "path",
                        ),
                    },
                ),
            ),
            content_model: ContentModel {
                permitted_categories: ElementCategory(
                    Animation | BasicShape | Container | Descriptive | FilterPrimitive | Gradient | Graphics | GraphicsReferencing | LightSource | NeverRendered | PaintServer | Renderable | Shape | Structural | StructurallyExternal | TextContent | TextContentChild | TransferFunction | Uncategorised,
                ),
                permitted_elements: {},
            },
            attributes: AttrModel {
                expected_attribute_groups: AttributeGroup(
                    AnimationAddition | AnimationAttributeTarget | AnimationEvent | AnimationTargetElement | AnimationTiming | AnimationValue | Aria | ConditionalProcessing | Core | DocumentEvent | DocumentElementEvent | FilterPrimitive | GraphicalEvent | GlobalEvent | Presentation | TransferFunction | XLink,
                ),
                expected_attributes: {},
                values: {},
            },
            text: Some(
                Static(
                    "",
                ),
            ),
        },
    ),
    ui: None,
}
