crates/oxvg_actions/src/actions/structure/snapshots/oxvg_actions__actions__structure__creation__test__insert.snap
---
source: crates/oxvg_actions/src/actions/structure/creation.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><path><xml:path/></path><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>svg</oxvg:arg></oxvg:action><oxvg:action oxvg:id="Insert"><oxvg:arg>path</oxvg:arg></oxvg:action><oxvg:action oxvg:id="InsertNS"><oxvg:arg>http://www.w3.org/XML/1998/namespace</oxvg:arg><oxvg:arg>xml:path</oxvg:arg></oxvg:action></oxvg:history><oxvg:selection oxvg:ids="3"/></oxvg:state></svg>
